added basic classes for BattleShip functionality and experimented with ConsoleWindow input

--- a/Sharpie/Properties/launchSettings.json
+++ b/Sharpie/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Sharpie": {
       "commandName": "Project",
-      "commandLineArgs": "-l"
+      "commandLineArgs": "-bl"
     }
   }
 }
